--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -66,6 +66,8 @@
     <string name="action_settings">Preferences</string>
     <string name="pref_resume_on_replug">Resume playback</string>
     <string name="pref_resume_on_replug_hint">If you paused by plugging headset out, it will resume on replug.</string>
+    <string name="pref_save_playback_speed">Save playback speed</string>
+    <string name="pref_save_playback_speed_hint">If you change playback speed during playback, that setting will be used for future playbacks.</string>
     <string name="min">%s min</string>
     <string name="delete_last_number">Deletes the last entered number</string>
     <plurals name="seconds">
